--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta http-equiv="Pragma" content="no-cache">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
   <!-- icon -->
-  <link rel="icon" href="favicon.png">
+  <!-- <link rel="icon" href="favicon.png"> -->
   <!-- 移动端 -->
   <meta name="format-detection" content="email=no">
   <meta name="format-detection" content="telephone=no">
